Perkin-UAT/force-app/main/default/objects/Permission_Set_History__c/Permission_Set_History__c.object-meta.xml
<CustomObject>
    <description>This will hold changes to permission sets</description>
    <label>Permission Set History</label>
    <nameField>
        <displayFormat>PSH-{000000000}</displayFormat>
        <label>Permission Set History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Permission Set History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>