Perkin-UAT/force-app/main/default/objects/Permission_Set_History__c/fields/Date_Time_Changed__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Changed__c</fullName>
    <description>The Date/Time The Field Value was  Changed</description>
    <label>Date/Time Changed</label>
    <type>DateTime</type>
</CustomField>