Perkin-UAT/force-app/main/default/objects/Permission_Set_History__c/fields/Permission_Set_Label__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Label__c</fullName>
    <description>The Display Label for the Permission Set</description>
    <label>Permission Set Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>