Perkin-UAT/force-app/main/default/objects/Permission_Set_History__c/fields/Permission_Set_Link__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Link__c</fullName>
    <defaultValue>&quot;/lightning/setup/PermSets/page?address=%2F&quot;</defaultValue>
    <description>This is the link to the permission set</description>
    <label>Permission Set Link</label>
    <type>Url</type>
</CustomField>