Perkin-UAT/force-app/main/default/objects/Permission_Set_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Field_Name__c</columns>
    <columns>Previous_Value__c</columns>
    <columns>New_Value__c</columns>
    <columns>Date_Time_Changed__c</columns>
    <columns>Changed_By__c</columns>
    <columns>Permission_Set_Label__c</columns>
    <columns>Permission_Set_Link__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>